<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bu_star"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/select_star"
            android:gravity="center"
            android:text="@string/text_main_star" />

        <RadioButton
            android:id="@+id/bu_square"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_square"
            android:gravity="center"
            android:text="@string/text_main_square" />


        <RadioButton
            android:id="@+id/bu_moment"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_moment"
            android:button="@null"
            android:gravity="center"
            android:text="@string/text_main_moment"
            android:textColor="#FFFFFF" />


        <RadioButton
            android:id="@+id/bu_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_chat"
            android:gravity="center"
            android:text="@string/text_main_chat" />

        <RadioButton
            android:id="@+id/bu_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_mine"
            android:gravity="center"
            android:text="@string/text_main_me" />
    </RadioGroup>


</LinearLayout>